fix flicker runtime errors, babel bug on undef array in statics

--- a/apps/tools/.flint/static/tools.css
+++ b/apps/tools/.flint/static/tools.css
@@ -22,13 +22,13 @@ body.__flintfocus {
   z-index: 2147483646;
   opacity: 0;
   background: rgba(255,0,0,0.03);
-  transition: all linear 1000ms;
-  transition-delay: 500ms;
+  transition: all linear 100ms;
+  transition-delay: 20ms;
 }
 
 .__flintError.active {
   opacity: 1;
-  transition-delay: 0;
+  transition-delay: 2000ms;
 }
 
 ._flintdevtools {
